--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <section class="firstsection background">
         <div class="box-main">
             <div class="firthalf">
-            <p class="bigtext">the future of the e-education is here</p>
-            <p class=" 
+                <p class="bigtext">the future of the e-education is here</p>
+                <p class=" 
             'smalltext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque eius dolor.</p>
-            <div class="buttons">
-                <button class="btn">Subscribe</button>
-                <button class="btn">Watch video</button>
-            </div>
+                <div class="buttons">
+                    <button class="subscribe">Subscribe</button>
+                    <button class="watch">Watch video</button>
+                </div>
             </div>
             <div class="secondhalf">
                 <img src="./1.jpg" alt="">
@@ -46,48 +46,90 @@
     </section>
 
     <section class="section">
-    <div class="para">
-    <p class="sectiontag bigtext">The end of your search is here</p>
-    <p class="sectionsubtag smalltext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores beatae distinctio temporibus quo recusandae odio adipisci ducimus iusto ipsum amet, possimus quidem accusamus explicabo error, eveniet vitae fugit doloribus. Iusto impedit harum reprehenderit eius blanditiis ratione ut molestias, magnam officia quasi nihil sunt quod hic voluptatem, atque itaque. Repellendus, repellat? Voluptatem distinctio aliquam in quidem maxime eos expedita, quis commodi saepe, accusamus praesentium officiis, inventore recusandae iure amet iusto sunt libero deleniti earum. Tempora dignissimos, eius sunt iusto aperiam commodi laudantium vitae blanditiis quasi aliquam modi nobis dicta inventore quis nesciunt hic porro assumenda illum quam at, atque aspernatur? Voluptate distinctio eos saepe ducimus rerum dolorum commodi placeat, sapiente vitae neque molestias perferendis veniam beatae deserunt pariatur, id a delectus, voluptas nulla adipisci ullam ea ut reprehenderit? Quos illum, dignissimos animi blanditiis beatae eaque. Odit optio ipsum molestiae error maiores sint aliquam ut, quam doloremque exercitationem magnam nam reiciendis expedita est iusto repellat ratione natus fugiat quos eveniet eligendi odio, vero cum! Suscipit reiciendis a, perspiciatis quaerat error sunt impedit eaque temporibus inventore, obcaecati dolor cumque eveniet minus asperiores in officiis et excepturi fugiat dolores placeat libero doloribus sequi! Doloremque labore officia omnis et consequatur ullam vel impedit cupiditate hic ut expedita enim neque voluptatem nesciunt repellat corrupti ea dolores, nostrum vitae voluptates. A nam voluptatibus nobis nemo quibusdam soluta unde possimus ullam est ipsam eligendi nihil modi maxime veritatis fuga animi consequatur quo vero illum, consequuntur delectus earum sequi mollitia? Recusandae optio quaerat maxime, sint nostrum pariatur blanditiis unde quia facere sed repellendus quos impedit magni doloremque enim a id excepturi eligendi suscipit ea quam repellat? Temporibus quos illo dolor quibusdam sunt quas, labore molestias doloribus? Placeat dicta distinctio at delectus laboriosam quae eum aliquid quod et iste sit reiciendis porro modi non repellendus necessitatibus accusantium, cum nesciunt provident. Odit, deserunt aspernatur. Corporis consectetur perferendis, rerum quia, incidunt distinctio ut eaque magni omnis animi tempore possimus eum sequi ipsum! Molestiae, molestias maxime corrupti officiis fugiat qui impedit architecto aperiam saepe expedita praesentium error animi consequatur, possimus nemo exercitationem ex ab culpa deleniti voluptate?</p>
-</div>
-    <div class="thumb">
-        <img src="./3.jpg" alt="">
-    </div>
-</section> 
+        <div class="para">
+            <p class="sectiontag bigtext">The end of your search is here</p>
+            <p class="sectionsubtag smalltext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+                beatae distinctio temporibus quo recusandae odio adipisci ducimus iusto ipsum amet, possimus quidem
+                accusamus explicabo error, eveniet vitae fugit doloribus. Iusto impedit harum reprehenderit eius
+                blanditiis ratione ut molestias, magnam officia quasi nihil sunt quod hic voluptatem, atque itaque.
+                Repellendus, repellat? Voluptatem distinctio aliquam in quidem maxime eos expedita, quis commodi saepe,
+                accusamus praesentium officiis, inventore recusandae iure amet iusto sunt libero deleniti earum. Tempora
+                dignissimos, eius sunt iusto aperiam commodi laudantium vitae blanditiis quasi aliquam modi nobis dicta
+                inventore quis nesciunt hic porro assumenda illum quam at, atque aspernatur? Voluptate distinctio eos
+                saepe ducimus rerum dolorum commodi placeat, sapiente vitae neque molestias perferendis veniam beatae
+                deserunt pariatur, id a delectus, voluptas nulla adipisci ullam ea ut reprehenderit? Quos illum.</p>
+        </div>
+        <div class="thumb">
+            <img src="./3.jpg" alt="">
+        </div>
+    </section>
 
     <section class="section left " id="about">
-    <div class="para">
-    <p class="sectiontag bigtext">Transforming education in our country</p>
-    <p class="sectionsubtag smalltext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores beatae distinctio temporibus quo recusandae odio adipisci ducimus iusto ipsum amet, possimus quidem accusamus explicabo error, eveniet vitae fugit doloribus. Iusto impedit harum reprehenderit eius blanditiis ratione ut molestias, magnam officia quasi nihil sunt quod hic voluptatem, atque itaque. Repellendus, repellat? Voluptatem distinctio aliquam in quidem maxime eos expedita, quis commodi saepe, accusamus praesentium officiis, inventore recusandae iure amet iusto sunt libero deleniti earum. Tempora dignissimos, eius sunt iusto aperiam commodi laudantium vitae blanditiis quasi aliquam modi nobis dicta inventore quis nesciunt hic porro assumenda illum quam at, atque aspernatur? Voluptate distinctio eos saepe ducimus rerum dolorum commodi placeat, sapiente vitae neque molestias perferendis veniam beatae deserunt pariatur, id a delectus, voluptas nulla adipisci ullam ea ut reprehenderit? Quos illum, dignissimos animi blanditiis beatae eaque. Odit optio ipsum molestiae error maiores sint aliquam ut, quam doloremque exercitationem magnam nam reiciendis expedita est iusto repellat ratione natus fugiat quos eveniet eligendi odio, vero cum! Suscipit reiciendis a, perspiciatis quaerat error sunt impedit eaque temporibus inventore, obcaecati dolor cumque eveniet minus asperiores in officiis et excepturi fugiat dolores placeat libero doloribus sequi! Doloremque labore officia omnis et consequatur ullam vel impedit cupiditate hic ut expedita enim neque voluptatem nesciunt repellat corrupti ea dolores, nostrum vitae voluptates. A nam voluptatibus nobis nemo quibusdam soluta unde possimus ullam est ipsam eligendi nihil modi maxime veritatis fuga animi consequatur quo vero illum, consequuntur delectus earum sequi mollitia? Recusandae optio quaerat maxime, sint nostrum pariatur blanditiis unde quia facere sed repellendus quos impedit magni doloremque enim a id excepturi eligendi suscipit ea quam repellat? Temporibus quos illo dolor quibusdam sunt quas, labore molestias doloribus? Placeat dicta distinctio at delectus laboriosam quae eum aliquid quod et iste sit reiciendis porro modi non repellendus necessitatibus accusantium, cum nesciunt provident. Odit, deserunt aspernatur. Corporis consectetur perferendis, rerum quia, incidunt distinctio ut eaque magni omnis animi tempore possimus eum sequi ipsum! Molestiae, molestias maxime corrupti officiis fugiat qui impedit architecto aperiam saepe expedita praesentium error animi consequatur, possimus nemo exercitationem ex ab culpa deleniti voluptate?</p>
-</div>
-    <div class="thumb">
-        <img src="./4.jpg" alt="">
-    </div>
-</section> 
+        <div class="para">
+            <p class="sectiontag bigtext">Transforming education in our country</p>
+            <p class="sectionsubtag smalltext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+                beatae distinctio temporibus quo recusandae odio adipisci ducimus iusto ipsum amet, possimus quidem
+                accusamus explicabo error, eveniet vitae fugit doloribus. Iusto impedit harum reprehenderit eius
+                blanditiis ratione ut molestias, magnam officia quasi nihil sunt quod hic voluptatem, atque itaque.
+                Repellendus, repellat? Voluptatem distinctio aliquam in quidem maxime eos expedita, quis commodi saepe,
+                accusamus praesentium officiis, inventore recusandae iure amet iusto sunt libero deleniti earum. Tempora
+                dignissimos, eius sunt iusto aperiam commodi laudantium vitae blanditiis quasi aliquam modi nobis dicta
+                inventore quis nesciunt hic porro assumenda illum quam at, atque aspernatur? Voluptate distinctio eos
+                saepe ducimus rerum dolorum commodi placeat, sapiente vitae neque molestias perferendis veniam beatae
+                deserunt pariatur, id a delectus, voluptas nulla adipisci ullam ea ut reprehenderit? Quos illum,
+                dignissimos animi blanditiis beatae eaque. Odit optio ipsum molestiae error maiores sint aliquam ut,
+                quam doloremque exercitationem magnam nam reiciendis expedita est iusto repellat ratione natus fugiat
+                quos eveniet eligendi odio, vero cum! Suscipit reiciendis a, perspiciatis quaerat error sunt impedit
+                eaque temporibus inventore, obcaecati dolor cumque eveniet minus asperiores in officiis et excepturi
+                fugiat dolores placeat libero doloribus sequi! Doloremque labore officia omnis et consequatur ullam vel
+                impedit cupiditate hic ut expedita enim neque voluptatem nesciunt repellat corrupti ea dolores, nostrum
+                vitae voluptates. </p>
+        </div>
+        <div class="thumb">
+            <img src="./4.jpg" alt="">
+        </div>
+    </section>
     <section class="section" id="services">
-    <div class="para">
-    <p class="sectiontag bigtext">Let us go together </p>
-    <p class="sectionsubtag smalltext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores beatae distinctio temporibus quo recusandae odio adipisci ducimus iusto ipsum amet, possimus quidem accusamus explicabo error, eveniet vitae fugit doloribus. Iusto impedit harum reprehenderit eius blanditiis ratione ut molestias, magnam officia quasi nihil sunt quod hic voluptatem, atque itaque. Repellendus, repellat? Voluptatem distinctio aliquam in quidem maxime eos expedita, quis commodi saepe, accusamus praesentium officiis, inventore recusandae iure amet iusto sunt libero deleniti earum. Tempora dignissimos, eius sunt iusto aperiam commodi laudantium vitae blanditiis quasi aliquam modi nobis dicta inventore quis nesciunt hic porro assumenda illum quam at, atque aspernatur? Voluptate distinctio eos saepe ducimus rerum dolorum commodi placeat, sapiente vitae neque molestias perferendis veniam beatae deserunt pariatur, id a delectus, voluptas nulla adipisci ullam ea ut reprehenderit? Quos illum, dignissimos animi blanditiis beatae eaque. Odit optio ipsum molestiae error maiores sint aliquam ut, quam doloremque exercitationem magnam nam reiciendis expedita est iusto repellat ratione natus fugiat quos eveniet eligendi odio, vero cum! Suscipit reiciendis a, perspiciatis quaerat error sunt impedit eaque temporibus inventore, obcaecati dolor cumque eveniet minus asperiores in officiis et excepturi fugiat dolores placeat libero doloribus sequi! Doloremque labore officia omnis et consequatur ullam vel impedit cupiditate hic ut expedita enim neque voluptatem nesciunt repellat corrupti ea dolores, nostrum vitae voluptates. A nam voluptatibus nobis nemo quibusdam soluta unde possimus ullam est ipsam eligendi nihil modi maxime veritatis fuga animi consequatur quo vero illum, consequuntur delectus earum sequi mollitia? Recusandae optio quaerat maxime, sint nostrum pariatur blanditiis unde quia facere sed repellendus quos impedit magni doloremque enim a id excepturi eligendi suscipit ea quam repellat? Temporibus quos illo dolor quibusdam sunt quas, labore molestias doloribus? Placeat dicta distinctio at delectus laboriosam quae eum aliquid quod et iste sit reiciendis porro modi non repellendus necessitatibus accusantium, cum nesciunt provident. Odit, deserunt aspernatur. Corporis consectetur perferendis, rerum quia, incidunt distinctio ut eaque magni omnis animi tempore possimus eum sequi ipsum! Molestiae, molestias maxime corrupti officiis fugiat qui impedit architecto aperiam saepe expedita praesentium error animi consequatur, possimus nemo exercitationem ex ab culpa deleniti voluptate?</p>
-</div>
-    <div class="thumb">
-        <img src="./6.jpg" alt="">
-    </div>
-</section> 
-<hr>
+        <div class="para">
+            <p class="sectiontag bigtext">Let us go together </p>
+            <p class="sectionsubtag smalltext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+                beatae distinctio temporibus quo recusandae odio adipisci ducimus iusto ipsum amet, possimus quidem
+                accusamus explicabo error, eveniet vitae fugit doloribus. Iusto impedit harum reprehenderit eius
+                blanditiis ratione ut molestias, magnam officia quasi nihil sunt quod hic voluptatem, atque itaque.
+                Repellendus, repellat? Voluptatem distinctio aliquam in quidem maxime eos expedita, quis commodi saepe,
+                accusamus praesentium officiis, inventore recusandae iure amet iusto sunt libero deleniti earum. Tempora
+                dignissimos, eius sunt iusto aperiam commodi laudantium vitae blanditiis quasi aliquam modi nobis dicta
+                inventore quis nesciunt hic porro assumenda illum quam at, atque aspernatur? Voluptate distinctio eos
+                saepe ducimus rerum dolorum commodi placeat, sapiente vitae neque molestias perferendis veniam beatae
+                deserunt pariatur, id a delectus, voluptas nulla adipisci ullam ea ut reprehenderit? Quos illum,
+                dignissimos animi blanditiis beatae eaque. Odit optio ipsum molestiae error maiores sint aliquam ut,
+                quam doloremque exercitationem magnam nam reiciendis expedita est iusto repellat ratione natus fugiat
+                quos eveniet eligendi odio, vero cum! Suscipit reiciendis a, perspiciatis quaerat error sunt impedit
+                eaque temporibus inventore, obcaecati dolor cumque eveniet minus asperiores in officiis et excepturi
+                fugiat dolores placeat libero doloribus sequi! Doloremque labore officia omnis et consequatur ullam vel
+                impedit cupiditate hic ut expedita enim neque voluptatem nesciunt repellat corrupti ea dolores, nostrum
+                vitae voluptates.</p>
+        </div>
+        <div class="thumb">
+            <img src="./6.jpg" alt="">
+        </div>
+    </section>
+    <hr>
     <section class="contact" id="contact">
-        <h2 class="contact1">Contact us</h2> 
+        <h2 class="contact1">Contact us</h2>
         <div class="form">
-            <input class="form-input"type="text" name="name" id="name" placeholder="Enter our name">
-            <input type="number"class="form-input" name="number" id=" number" placeholder="Enter your number">
-            <input type="email"class="form-input" name="email" id="email" placeholder="Enter your mail">
-            <textarea class="form-input"name="" id="" cols="30" rows="10" placeholder="Ellaborate your concern"></textarea>
+            <input class="form-input" type="text" name="name" id="name" placeholder="Enter our name">
+            <input type="number" class="form-input" name="number" id=" number" placeholder="Enter your number">
+            <input type="email" class="form-input" name="email" id="email" placeholder="Enter your mail">
+            <textarea class="form-input" name="" id="" cols="30" rows="10"
+                placeholder="Ellaborate your concern"></textarea>
             <button class="btn-dark btn-sm">Submit</button>
         </div>
     </section>
     <footer>
         <p class="text-footer background">
-        Copyright &copy; 2022-All rights reserved
-    </p>
+            Copyright &copy; 2022-All rights reserved to Ayush Dixit
+        </p>
     </footer>
     <script src="./script.js"></script>
 </body>
