assigned issue resolved

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
         <div class="rightnav v-class">
             <input type="text" name="search" id="search">
-            <button class="btn btn-sm">Search</button>
+            <button class="search">Search</button>
         </div>
         <div class="burger">
             <div class="line"></div>
@@ -123,7 +123,7 @@
             <input type="email" class="form-input" name="email" id="email" placeholder="Enter your mail">
             <textarea class="form-input" name="" id="" cols="30" rows="10"
                 placeholder="Ellaborate your concern"></textarea>
-            <button class="btn-dark btn-sm">Submit</button>
+            <button class="submit">Submit</button>
         </div>
     </section>
     <footer>
