--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <ul class="nav-list another v-class">
             <div class="logo"><img src="./1.jpg" alt="image"></div>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="rightnav v-class">
             <input type="text" name="search" id="search">
-            <button class="search">Search</button>
+            <button class="search" aria-placeholder="Enter Text to Search">Search</button>
         </div>
         <div class="burger">
             <div class="line"></div>
