Contact Us Page Added

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
         <div class="rightnav v-class">
             <input type="text" name="search" id="search">
@@ -38,8 +38,9 @@
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto quia voluptates dolore distinctio impedit, totam quas consectetur velit laboriosam maiores enim maxime cum ab id consequatur, reiciendis assumenda aliquam nulla!</p>  
 
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto quia voluptates dolore distinctio impedit, totam quas consectetur velit laboriosam maiores enim maxime cum ab id consequatur, reiciendis assumenda aliquam nulla!</p>  
-<button class="contact">
+<button class="contact"><a href="./contact.html">
     Contact Us
+    </a>
 </button>
 <button class="services">
     Services
