--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <nav class="navbar background h-nav">
         <ul class="nav-list another v-class">
             <div class="logo"><img src="./1.jpg" alt="image"></div>
-            <li><a href="#home">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
         <div class="rightnav v-class">
             <input type="text" name="search" id="search">
