Added Services Page & did correction on home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo"><img src="./1.jpg" alt="image" /></div>
         <li><a href="#home">Home</a></li>
         <li><a href="./about.html">About</a></li>
-        <li><a href="#services">Services</a></li>
+        <li><a href="./services.html">Services</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
       <div class="rightnav v-class">
@@ -26,11 +26,11 @@
         <div class="line"></div>
         <div class="line"></div>
       </div>
-        <ul class="nav-list another v-class">
+        <!-- <ul class="nav-list another v-class">
             <div class="logo"><img src="./1.jpg" alt="image"></div>
             <li><a href="#home">Home</a></li>
             <li><a href="./about.html">About</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="./services.html">Services</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="rightnav v-class">
@@ -41,7 +41,7 @@
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
-        </div>
+        </div> -->
     </nav>
     <section class="firstsection background">
       <div class="box-main">
@@ -157,7 +157,7 @@
         ></textarea>
         <button class="btn-dark btn-sm">Submit</button>
       </div>
-        <h2 class="contact1">Contact us</h2>
+        <!-- <h2 class="contact1">Contact us</h2>
         <div class="form">
             <input class="form-input" type="text" name="name" id="name" placeholder="Enter our name">
             <input type="number" class="form-input" name="number" id=" number" placeholder="Enter your number">
@@ -165,7 +165,7 @@
             <textarea class="form-input" name="" id="" cols="30" rows="10"
                 placeholder="Ellaborate your concern"></textarea>
             <button class="submit">Submit</button>
-        </div>
+        </div> -->
     </section>
     <footer>
       <p class="text-footer background">
