--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="card">
+        <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.2">
           <div class="icon-wrapper" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.1">
             <i class="fas fa-hammer"></i>
           </div>
