box-main images and text made responsive on small device

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <section class="firstsection background">
       <div class="box-main">
         <div class="firthalf">
-          <p class="bigtext">the future of the e-education is here</p>
-          <p class="'smalltext">
+          <h1 class="bigtext" >The Future of E-education is here.</h1>
+          <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
             doloremque eius dolor.
           </p>
