contact page updated

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <div class="bimg"><img src="./th2.jfif" alt="" >
+    <div class="bimg"><img src="./contactus.jpg" alt="" >
     </div>    <nav class="navbar background h-nav">
         <ul class="nav-list another v-class">
             <div class="logo"><img src="./1.jpg" alt="image"></div>
@@ -34,7 +34,7 @@
             <input class="form-input" type="text" name="name" id="name" placeholder="Enter our name">
             <input type="number" class="form-input" name="number" id=" number" placeholder="Enter your number">
             <input type="email" class="form-input" name="email" id="email" placeholder="Enter your mail">
-            <textarea class="form-input" name="" id="" cols="30" rows="10"
+            <textarea class="form-input" name="" id="" cols="150" rows="15"
                 placeholder="Ellaborate your concern"></textarea>
             <br><button class="submit">Submit</button>
         </div>
