--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
-    <div class="bimg"><img src="./contactus.jpg" alt="" >
+    <div class="bimg"><img src="img/contactus.jpg" alt="" >
     </div>    <nav class="navbar background h-nav">
         <ul class="nav-list another v-class">
-            <div class="logo"><img src="./1.jpg" alt="image"></div>
+            <div class="logo"><img src="img/1.jpg" alt="image"></div>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="#services">Services</a></li>
