--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>e-education</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <nav class="navbar background h-nav">
 
         <ul class="nav-list another v-class">
-            <div class="logo"><img src="./1.jpg" alt="image"></div>
+            <div class="logo"><img src="img/1.jpg" alt="image"></div>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="#services">Services</a></li>
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="secondhalf">
-          <img src="./1.jpg" alt="" />
+          <img src="img/1.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -73,7 +73,7 @@
         </p>
       </div>
       <div class="thumb">
-        <img src="./3.jpg" alt="" />
+        <img src="img/3.jpg" alt="" />
       </div>
     </section>
 
@@ -108,7 +108,7 @@
         </p>
       </div>
       <div class="thumb">
-        <img src="./6.jpg" alt="" />
+        <img src="img/6.jpg" alt="" />
       </div>
     </section>
     <hr>
@@ -117,6 +117,6 @@
       </p>
 
     </footer>
-    <script src="./script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
