--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
   <!-- Google Font -->
   <link href="https:fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="services.css" />
+  <link rel="stylesheet" href="css/services.css" />
 </head>
 
 <body>
